--- a/static/wbindex.html
+++ b/static/wbindex.html
@@ -254,7 +254,8 @@
             document.getElementById("login-form").classList.add("d-none");
             document.getElementById("chat-interface").classList.remove("d-none");
 
-            const ws_url = `ws://10.70.9.233:8000/ws/${encodeURIComponent(clientId)}`;
+            //const ws_url = `ws://10.70.9.233:8000/ws/${encodeURIComponent(clientId)}`;
+            const ws_url = `ws://${window.location.host}/ws/${encodeURIComponent(clientId)}`;
             socket = new WebSocket(ws_url);
 
             socket.onopen = function(event) {
